_infrastructure/prometheus/prometheus/ingresses.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-prometheus
  namespace: prometheus
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 9090
      protocol: TCP
      targetPort: web
  selector:
    prometheus: prometheus
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-prometheus
  namespace: prometheus
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 9093
      protocol: TCP
      targetPort: web
  selector:
    alertmanager: alertmanager
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingressroute
  namespace: prometheus
spec:
  routes:
    - kind: Rule
      match: Host(`prometheus.nycode.dev`)
      services:
        - name: prometheus-prometheus
          namespace: prometheus
          kind: Service
          port: 9090
    - kind: Rule
      match: Host(`alertmanager.nycode.dev`)
      services:
        - name: alertmanager-prometheus
          namespace: prometheus
          kind: Service
          port: 9093
